docs: added documents

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kitiumai/auth-postgres",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "PostgreSQL database adapter for Kitium Auth",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -8,7 +8,10 @@
   "files": [
     "dist/**/*",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    "CHANGELOG.md",
+    "CODE_OF_CONDUCT.md",
+    "CONTRIBUTING.md"
   ],
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --sourcemap --dts --clean --target es2020 --platform node",
@@ -37,22 +40,32 @@
   },
   "keywords": [
     "auth",
-    "database",
-    "postgresql",
+    "authentication",
+    "authorization",
+    "identity",
+    "identity-management",
+    "security",
     "postgres",
+    "postgresql",
+    "psql",
+    "database",
+    "database-adapter",
+    "storage-adapter",
     "kitium",
     "kitiumai",
-    "database adapter",
-    "plugin",
-    "lazy-loading",
-    "authentication",
-    "authorization",
-    "identity",
-    "security",
-    "authentication",
-    "authorization",
-    "identity",
-    "security"
+    "kitium-auth",
+    "@kitiumai/auth",
+    "oauth2",
+    "oidc",
+    "saml",
+    "saml2",
+    "sso",
+    "api-keys",
+    "sessions",
+    "rbac",
+    "2fa",
+    "two-factor-auth",
+    "webauthn"
   ],
   "author": "KitiumAI",
   "license": "MIT",
@@ -72,7 +85,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@kitiumai/auth": "^3.0.2",
+    "@kitiumai/auth": "^3.0.3",
     "pg": "^8.10.0",
     "nanoid": "^5.0.4",
     "@kitiumai/logger": "1.5.0",
