--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "@kitiumai/auth-postgres",
   "version": "3.0.1",
-  "description": "PostgreSQL database adapter for Kitium Auth",
+  "description": "Enterprise-grade PostgreSQL storage adapter for @kitiumai/auth with full support for users, sessions, OAuth links, API keys, 2FA, RBAC, and SSO",
+  "type": "module",
+  "sideEffects": false,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
   "files": [
     "dist/**/*",
     "README.md",
@@ -16,9 +25,9 @@
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --sourcemap --dts --clean --target es2020 --platform node",
     "dev": "tsup src/index.ts --format cjs,esm --sourcemap --dts --watch --target es2020 --platform node",
-    "test": "jest --passWithNoTests",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "vitest run --passWithNoTests",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage --passWithNoTests",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "clean": "rimraf dist",
@@ -44,6 +53,7 @@
     "authorization",
     "identity",
     "identity-management",
+    "identity-provider",
     "security",
     "postgres",
     "postgresql",
@@ -51,21 +61,43 @@
     "database",
     "database-adapter",
     "storage-adapter",
+    "storage-backend",
     "kitium",
     "kitiumai",
     "kitium-auth",
     "@kitiumai/auth",
     "oauth2",
+    "oauth",
+    "openid",
     "oidc",
     "saml",
     "saml2",
     "sso",
+    "single-sign-on",
     "api-keys",
+    "api-authentication",
     "sessions",
+    "session-management",
+    "user-management",
     "rbac",
+    "role-based-access-control",
+    "access-control",
+    "permissions",
     "2fa",
     "two-factor-auth",
-    "webauthn"
+    "mfa",
+    "multi-factor-auth",
+    "webauthn",
+    "fido2",
+    "email-verification",
+    "email-auth",
+    "enterprise",
+    "sql",
+    "relational-database",
+    "typescript",
+    "nodejs",
+    "node",
+    "backend"
   ],
   "author": "KitiumAI",
   "license": "MIT",
@@ -88,25 +120,24 @@
     "@kitiumai/auth": "^3.0.3",
     "pg": "^8.10.0",
     "nanoid": "^5.0.4",
-    "@kitiumai/logger": "1.5.0",
-    "@kitiumai/types": "^1.0.0",
-    "@kitiumai/utils-ts": "^1.0.0",
-    "@kitiumai/error": "^1.0.0"
+    "@kitiumai/logger": "^2.0.0",
+    "@kitiumai/types": "^2.0.0",
+    "@kitiumai/utils-ts": "^2.0.1",
+    "@kitiumai/error": "^2.0.0"
   },
   "devDependencies": {
-    "@kitiumai/config": "^1.0.2",
-    "@kitiumai/lint": "^1.3.5",
-    "@kitiumai/scripts": "^0.2.1",
-    "@kitiumai/vitest-helpers": "^1.0.2",
-    "@types/jest": "^29.5.5",
+    "@kitiumai/config": "^2.0.0",
+    "@kitiumai/lint": "^2.0.0",
+    "@kitiumai/scripts": "^1.0.0",
+    "@kitiumai/vitest-helpers": "^2.0.0",
     "@types/node": "^20.6.0",
     "@types/pg": "^8.10.7",
+    "@vitest/coverage-v8": "^2.1.3",
     "eslint": "^9.15.0",
-    "jest": "^29.7.0",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
     "tsup": "7.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^2.0.0"
   },
   "pnpm": {
     "overrides": {
