--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kitiumai/auth-postgres",
-  "version": "3.0.1",
+  "version": "3.1.1",
   "description": "Enterprise-grade PostgreSQL storage adapter for @kitiumai/auth with full support for users, sessions, OAuth links, API keys, 2FA, RBAC, and SSO",
   "type": "module",
   "sideEffects": false,
@@ -54,14 +54,25 @@
     "identity",
     "identity-management",
     "identity-provider",
+    "iam",
     "security",
     "postgres",
     "postgresql",
     "psql",
+    "pg",
     "database",
     "database-adapter",
     "storage-adapter",
     "storage-backend",
+    "persistence",
+    "data-layer",
+    "repository",
+    "orm",
+    "sql",
+    "relational-database",
+    "rdbms",
+    "sql-database",
+    "connection-pool",
     "kitium",
     "kitiumai",
     "kitium-auth",
@@ -70,34 +81,71 @@
     "oauth",
     "openid",
     "oidc",
+    "openid-connect",
     "saml",
     "saml2",
     "sso",
     "single-sign-on",
+    "federated-identity",
     "api-keys",
     "api-authentication",
+    "api-security",
     "sessions",
     "session-management",
+    "session-store",
     "user-management",
+    "user-store",
     "rbac",
     "role-based-access-control",
+    "abac",
     "access-control",
     "permissions",
+    "acl",
     "2fa",
     "two-factor-auth",
     "mfa",
     "multi-factor-auth",
+    "totp",
+    "otp",
     "webauthn",
     "fido2",
+    "passkeys",
     "email-verification",
     "email-auth",
+    "passwordless",
+    "magic-link",
     "enterprise",
-    "sql",
-    "relational-database",
+    "enterprise-auth",
+    "multitenancy",
+    "multi-tenant",
+    "organization",
+    "team-management",
+    "audit-log",
+    "compliance",
+    "gdpr",
+    "hipaa",
+    "soc2",
+    "data-encryption",
+    "encryption-at-rest",
+    "secure-storage",
+    "token-storage",
+    "credential-storage",
     "typescript",
     "nodejs",
     "node",
-    "backend"
+    "backend",
+    "server-side",
+    "adapter-pattern",
+    "plugin",
+    "integration",
+    "saas",
+    "saas-auth",
+    "production-ready",
+    "scalable",
+    "high-performance",
+    "transaction-support",
+    "migration",
+    "schema"
   ],
   "author": "KitiumAI",
   "license": "MIT",
